--- a/39-PROYECTO-Criptomonedas/css/app.css
+++ b/39-PROYECTO-Criptomonedas/css/app.css
@@ -13,6 +13,15 @@ h1 {
     margin-bottom: 50px;
     margin-top: 80px;
 }
+
+h2.descripcion{
+    font-size: 35px;
+    color: white;
+    font-weight: 900;
+    text-align: center;
+    margin: 5rem 0;
+}
+
 h1::after {
     content: '';
     width: 100px;
